added layout function :rocket:

--- a/layout.html
+++ b/layout.html
@@ -44,6 +44,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/layout.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
 </head>
 
 <body>
@@ -57,75 +59,82 @@
         </div>
         <div class="row">
             <div class="col-xl-1 bg-body"></div>
-            <div class="col-xl-10  py-5 bg-color">
-                <img class="mx-auto d-block" src="img/webseite_Plan_Lehrmesse.png" usemap="#image-map">
-                <map name="image-map">
-                    <area target="" alt="1" data-id="1" href="" coords="155,42,177,71" shape="rect">
-                    <area target="" alt="2" data-id="2" href="" coords="154,75,178,105" shape="rect">
-                    <area target="" alt="3" data-id="3" href="" coords="155,109,177,135" shape="rect">
-                    <area target="" alt="4" data-id="4" href="" coords="178,186,157,167" shape="rect">
-                    <area target="" alt="5" data-id="5" href="" coords="177,218,153,188" shape="rect">
-                    <area target="" alt="6" data-id="6" href="" coords="177,250,155,221" shape="rect">
-                    <area target="" alt="7" data-id="7" href="" coords="155,253,179,284" shape="rect">
-                    <area target="" alt="8" data-id="8" href="" coords="178,312,155,285" shape="rect">
-                    <area target="" alt="9" data-id="9" href="" coords="158,318,179,344" shape="rect">
-                    <area target="" alt="10" data-id="10" href="" coords="156,348,178,375" shape="rect">
-                    <area target="" alt="11" data-id="11" href="" coords="157,408,179,441" shape="rect">
-                    <area target="" alt="12" data-id="12" href="" coords="156,444,180,474" shape="rect">
-                    <area target="" alt="13" data-id="13" href="" coords="158,507,178,536" shape="rect">
-                    <area target="" alt="14" data-id="14" href="" coords="158,537,178,569" shape="rect">
-                    <area target="" alt="15" data-id="15" href="" coords="153,571,177,601" shape="rect">
-                    <area target="" alt="16" data-id="16" href="" coords="230,53,258,80" shape="rect">
-                    <area target="" alt="17" data-id="17" href="" coords="262,51,289,80" shape="rect">
-                    <area target="" alt="18" data-id="18" href="" coords="231,84,258,112" shape="rect">
-                    <area target="" alt="19" data-id="19" href="" coords="262,84,289,112" shape="rect">
-                    <area target="" alt="20" data-id="20" href="" coords="230,156,257,182" shape="rect">
-                    <area target="" alt="21" data-id="21" href="" coords="263,156,291,183" shape="rect">
-                    <area target="" alt="22" data-id="22" href="" coords="230,188,257,216" shape="rect">
-                    <area target="" alt="23" data-id="23" href="" coords="263,188,289,217" shape="rect">
-                    <area target="" alt="24" data-id="24" href="" coords="230,250,257,276" shape="rect">
-                    <area target="" alt="25" data-id="25" href="" coords="261,249,289,278" shape="rect">
-                    <area target="" alt="26" data-id="26" href="" coords="230,281,257,309" shape="rect">
-                    <area target="" alt="27" data-id="27" href="" coords="263,282,290,310" shape="rect">
-                    <area target="" alt="28" data-id="28" href="" coords="229,342,258,369" shape="rect">
-                    <area target="" alt="29" data-id="29" href="" coords="261,342,290,368" shape="rect">
-                    <area target="" alt="30" data-id="30" href="" coords="229,374,257,401" shape="rect">
-                    <area target="" alt="31" data-id="31" href="" coords="261,374,288,401" shape="rect">
-                    <area target="" alt="32" data-id="32" href="" coords="218,436,257,474" shape="rect">
-                    <area target="" alt="33" data-id="33" href="" coords="261,435,299,474" shape="rect">
-                    <area target="" alt="34" data-id="34" href="" coords="218,479,258,516" shape="rect">
-                    <area target="" alt="35" data-id="35" href="" coords="261,479,299,516" shape="rect">
-                    <area target="" alt="36" data-id="36" href="" coords="218,543,256,581" shape="rect">
-                    <area target="" alt="37" data-id="37" href="" coords="259,544,299,581" shape="rect">
-                    <area target="" alt="38" data-id="38" href="" coords="219,586,258,623" shape="rect">
-                    <area target="" alt="39" data-id="39" href="" coords="262,586,299,623" shape="rect">
-                    <area target="" alt="40" data-id="40" href="" coords="350,49,371,67" shape="rect">
-                    <area target="" alt="41" data-id="41" href="" coords="351,71,371,101" shape="rect">
-                    <area target="" alt="42" data-id="42" href="" coords="349,104,372,132" shape="rect">
-                    <area target="" alt="43" data-id="43" href="" coords="349,166,373,185" shape="rect">
-                    <area target="" alt="44" data-id="44" href="" coords="350,188,371,205" shape="rect">
-                    <area target="" alt="45" data-id="45" href="" coords="350,210,373,239" shape="rect">
-                    <area target="" alt="46" data-id="46" href="" coords="347,240,372,271" shape="rect">
-                    <area target="" alt="47" data-id="47" href="" coords="347,321,372,342" shape="rect">
-                    <area target="" alt="48" data-id="48" href="" coords="346,345,372,375" shape="rect">
-                    <area target="" alt="49" data-id="49" href="" coords="348,377,371,408" shape="rect">
-                    <area target="" alt="50" data-id="50" href="" coords="347,454,372,485" shape="rect">
-                    <area target="" alt="51" data-id="51" href="" coords="350,490,372,518" shape="rect">
-                    <area target="" alt="52" data-id="52" href="" coords="348,522,372,550" shape="rect">
-                    <area target="" alt="53" data-id="53" href="" coords="350,553,371,583" shape="rect">
-                    <area target="" alt="54" data-id="54" href="" coords="349,586,372,615" shape="rect">
-                    <area target="" alt="55" data-id="55" href="" coords="93,689,142,739" shape="rect">
-                    <area target="" alt="56" data-id="56" href="" coords="92,842,141,890" shape="rect">
-                    <area target="" alt="57" data-id="57" href="" coords="218,790,268,836" shape="rect">
-                    <area target="" alt="58" data-id="58" href="" coords="307,764,357,814" shape="rect">
-                    <area target="" alt="staysmart" data-id="staysmart" href="" coords="125,763,148,812" shape="rect">
-                    <area target="" alt="buehne" data-id="buehne" href="" coords="216,690,298,782" shape="rect">
-                    <area target="" alt="attraktionen" data-id="attraktionen" href="" coords="351,690,452,738" shape="rect">
-                    <area target="" alt="info" data-id="info" href="" coords="389,854,415,879" shape="rect">
-                    <area target="" alt="wc" data-id="wc" href="" coords="376,627,404,683" shape="rect">
+
+            <div class="col-xl-5 p-5 bg-color">
+
+                <img id="logo" src="" class="logos-layout" alt="">
+
+            </div>
+            <div class="col-xl-5 py-5 bg-color ">
+
+                <img class="mx-auto d-block " src="img/webseite_Plan_Lehrmesse.png " usemap="#image-map ">
+                <map name="image-map ">
+                    <area  alt="1 " data-id="1 "  coords="155,42,177,71 " shape="rect ">
+                    <area  alt="2 " data-id="2 "  coords="154,75,178,105 " shape="rect ">
+                    <area  alt="3 " data-id="3 "  coords="155,109,177,135 " shape="rect ">
+                    <area  alt="4 " data-id="4 "  coords="178,186,157,167 " shape="rect ">
+                    <area  alt="5 " data-id="5 "  coords="177,218,153,188 " shape="rect ">
+                    <area  alt="6 " data-id="6 "  coords="177,250,155,221 " shape="rect ">
+                    <area  alt="7 " data-id="7 "  coords="155,253,179,284 " shape="rect ">
+                    <area  alt="8 " data-id="8 "  coords="178,312,155,285 " shape="rect ">
+                    <area  alt="9 " data-id="9 "  coords="158,318,179,344 " shape="rect ">
+                    <area  alt="10 " data-id="10 "  coords="156,348,178,375 " shape="rect ">
+                    <area  alt="11 " data-id="11 "  coords="157,408,179,441 " shape="rect ">
+                    <area  alt="12 " data-id="12 "  coords="156,444,180,474 " shape="rect ">
+                    <area  alt="13 " data-id="13 "  coords="158,507,178,536 " shape="rect ">
+                    <area  alt="14 " data-id="14 "  coords="158,537,178,569 " shape="rect ">
+                    <area  alt="15 " data-id="15 "  coords="153,571,177,601 " shape="rect ">
+                    <area  alt="16 " data-id="16 "  coords="230,53,258,80 " shape="rect ">
+                    <area  alt="17 " data-id="17 "  coords="262,51,289,80 " shape="rect ">
+                    <area  alt="18 " data-id="18 "  coords="231,84,258,112 " shape="rect ">
+                    <area  alt="19 " data-id="19 "  coords="262,84,289,112 " shape="rect ">
+                    <area  alt="20 " data-id="20 "  coords="230,156,257,182 " shape="rect ">
+                    <area  alt="21 " data-id="21 "  coords="263,156,291,183 " shape="rect ">
+                    <area  alt="22 " data-id="22 "  coords="230,188,257,216 " shape="rect ">
+                    <area  alt="23 " data-id="23 "  coords="263,188,289,217 " shape="rect ">
+                    <area  alt="24 " data-id="24 "  coords="230,250,257,276 " shape="rect ">
+                    <area  alt="25 " data-id="25 "  coords="261,249,289,278 " shape="rect ">
+                    <area  alt="26 " data-id="26 "  coords="230,281,257,309 " shape="rect ">
+                    <area  alt="27 " data-id="27 "  coords="263,282,290,310 " shape="rect ">
+                    <area  alt="28 " data-id="28 "  coords="229,342,258,369 " shape="rect ">
+                    <area  alt="29 " data-id="29 "  coords="261,342,290,368 " shape="rect ">
+                    <area  alt="30 " data-id="30 "  coords="229,374,257,401 " shape="rect ">
+                    <area  alt="31 " data-id="31 "  coords="261,374,288,401 " shape="rect ">
+                    <area  alt="32 " data-id="32 "  coords="218,436,257,474 " shape="rect ">
+                    <area  alt="33 " data-id="33 "  coords="261,435,299,474 " shape="rect ">
+                    <area  alt="34 " data-id="34 "  coords="218,479,258,516 " shape="rect ">
+                    <area  alt="35 " data-id="35 "  coords="261,479,299,516 " shape="rect ">
+                    <area  alt="36 " data-id="36 "  coords="218,543,256,581 " shape="rect ">
+                    <area  alt="37 " data-id="37 "  coords="259,544,299,581 " shape="rect ">
+                    <area  alt="38 " data-id="38 "  coords="219,586,258,623 " shape="rect ">
+                    <area  alt="39 " data-id="39 "  coords="262,586,299,623 " shape="rect ">
+                    <area  alt="40 " data-id="40 "  coords="350,49,371,67 " shape="rect ">
+                    <area  alt="41 " data-id="41 "  coords="351,71,371,101 " shape="rect ">
+                    <area  alt="42 " data-id="42 "  coords="349,104,372,132 " shape="rect ">
+                    <area  alt="43 " data-id="43 "  coords="349,166,373,185 " shape="rect ">
+                    <area  alt="44 " data-id="44 "  coords="350,188,371,205 " shape="rect ">
+                    <area  alt="45 " data-id="45 "  coords="350,210,373,239 " shape="rect ">
+                    <area  alt="46 " data-id="46 "  coords="347,240,372,271 " shape="rect ">
+                    <area  alt="47 " data-id="47 "  coords="347,321,372,342 " shape="rect ">
+                    <area  alt="48 " data-id="48 "  coords="346,345,372,375 " shape="rect ">
+                    <area  alt="49 " data-id="49 "  coords="348,377,371,408 " shape="rect ">
+                    <area  alt="50 " data-id="50 "  coords="347,454,372,485 " shape="rect ">
+                    <area  alt="51 " data-id="51 "  coords="350,490,372,518 " shape="rect ">
+                    <area  alt="52 " data-id="52 "  coords="348,522,372,550 " shape="rect ">
+                    <area  alt="53 " data-id="53 "  coords="350,553,371,583 " shape="rect ">
+                    <area  alt="54 " data-id="54 "  coords="349,586,372,615 " shape="rect ">
+                    <area  alt="55 " data-id="55 "  coords="93,689,142,739 " shape="rect ">
+                    <area  alt="56 " data-id="56 "  coords="92,842,141,890 " shape="rect ">
+                    <area  alt="57 " data-id="57 "  coords="218,790,268,836 " shape="rect ">
+                    <area  alt="58 " data-id="58 "  coords="307,764,357,814 " shape="rect ">
+                    <area  alt="staysmart " data-id="staysmart "  coords="125,763,148,812 " shape="rect ">
+                    <area  alt="buehne " data-id="buehne "  coords="216,690,298,782 " shape="rect ">
+                    <area  alt="attraktionen " data-id="attraktionen "  coords="351,690,452,738 " shape="rect ">
+                    <area  alt="info " data-id="info "  coords="389,854,415,879 " shape="rect ">
+                    <area  alt="wc " data-id="wc "  coords="376,627,404,683 " shape="rect ">
                 </map>
             </div>
-            <div class="col-xl-1 bg-body"></div>
+            <div class="col-xl-1 bg-body "></div>
 
 
         </div>
