--- a/profile.html
+++ b/profile.html
@@ -65,18 +65,10 @@
 
             <div class="col-xl-4 containertest d-flex flex-row-reverse">
 
-                <form class="form-inline my-2 my-lg-0">
+                <form class="form-inline m-5 my-lg-0">
                     <a id="website" class="btn btn-primary mx-2 btn-lg" href="" role="button" target="_blank">Webseite</a>
 
-                    <div class="btn-group">
-                        <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Downloads
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Lehre bei stay smart</a>
-                            <a class="dropdown-item" href="#">Firma</a>
-                        </div>
-                    </div>
+
                 </form>
             </div>
             <div class="col-xl-1 bg-body"></div>
