final edits :lipstick:

--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,9 @@
                     <p id="name_address" class="address">{name}</p>
                     <p id="street" class="address"> {Strasse}</p>
                     <p id="place" class="address">{Ort}</p><br>
-                    <p id="email" class="address"> E-Mail :{}</p>
+                    <p class="address">E-Mail :
+                        <a id="email" href=""></a>
+                    </p>
                     <p id="tel" class="address"> Tel: {}</p>
                 </div>
             </div>
